Fix AR control panel visibility
Removed display property for #calibrationPanel when not collapsed.

--- a/css/style.css
+++ b/css/style.css
@@ -1051,10 +1051,6 @@ body.ui-clean #calibrationLayer {
     width: auto;
   }
 
-  #calibrationPanel:not(.collapsed) ~ #editPanel {
-    display: none;
-  }
-
   select {
     min-width: 150px;
     font-size: 12px;
